# quicknote

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: global.css  main.tsx  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_notes.sql  0002_create_settings.sql
src-tauri/src/: hotkeys.rs  lib.rs  main.rs  notes.rs  settings.rs  tray.rs  windows.rs
src/windows/: Capture.tsx  NotesList.tsx  Onboarding.tsx
